fix arrow postiton and horizontal scroll

--- a/contents/styles/sections/_project-list.sass
+++ b/contents/styles/sections/_project-list.sass
@@ -11,7 +11,7 @@
       content: "→"
       position: absolute
       top: 0
-      right: 0
+      right: $spacer-mlg
       font-size: 1.4em
       opacity: 0
       transform: translate3d($spacer-mlg, 0, 0)
